# fastapi-test-proj

./: README.md  pyproject.toml
fastapi_test_proj/: main.py
