[tool.poetry]
name = "fastapi-test-proj"
version = "0.1.0"
description = ""
authors = ["Xiangshi Yin <piupiuyin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
